--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,5 +2,15 @@ image: Visual Studio 2017
 
 clone_depth: 5
 
-on_finish:
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+build_script:
+- msbuild /p:Platform=x86 /p:Configuration=Debug
+- msbuild /p:Platform=x86 /p:Configuration=Release
+- msbuild /p:Platform=x64 /p:Configuration=Debug
+- msbuild /p:Platform=x64 /p:Configuration=Release
+
+artifacts:
+  - path: '**\*.exe'
+  - path: '**\*.pdb'
+
+# on_finish:
+#   - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
